--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,11 +4,8 @@ services:
   db:
     image: mysql:5.7
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: entrytrackerdb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+    env_file:
+      - env.env
     volumes:
       - db_data:/var/lib/mysql
     networks:
@@ -20,11 +17,8 @@ services:
       - "5000:5000"
     depends_on:
       - db
-    environment:
-      DB_HOST: db
-      DB_USER: user
-      DB_PASSWORD: password
-      DB_NAME: entrytrackerdb
+    env_file:
+      - env.env
     networks:
       - backend-network
       - frontend-network
