--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
           file: ./Dockerfile
           tags: entrytracker:latest
           outputs: type=docker,dest=entrytracker.tar
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Upload Docker image as artifact
         uses: actions/upload-artifact@v4
