Fix typo in Deploy-to-EC2 job name and update curl command to specify port 80

--- a/.github/workflows/entrytracker-ci-cd.yml
+++ b/.github/workflows/entrytracker-ci-cd.yml
@@ -1,5 +1,7 @@
 
 name: CI/CD Pipeline - EntryTracker
+author: Alex Macuhlsky
+description: CI/CD pipeline for EntryTracker application using GitHub Actions, Docker, and AWS ECR.
 
 on:
   push:
