--- a/entrytracker-ci-cd.yml
+++ b/entrytracker-ci-cd.yml
@@ -160,7 +160,7 @@ jobs:
     needs: Push-to-ECR
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to EC2 with SSHH
+      - name: Deploy to EC2 with SSH
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -175,7 +175,7 @@ jobs:
 
             echo "⏳ Waiting for EntryTracker to connect to DB..."
             for i in {1..30}; do
-              response=$(curl -s http://localhost)
+              response=$(curl -s http://localhost:80)
               echo "📡 Response attempt $i:"
               echo "$response"
               if echo "$response" | grep -q '"message": "Data fetched successfully from the database."'; then
