--- a/.github/workflows/entrytracker-ci-cd.yml
+++ b/.github/workflows/entrytracker-ci-cd.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   Build-application:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
