--- a/.github/workflows/entrytracker-ci-cd.yml
+++ b/.github/workflows/entrytracker-ci-cd.yml
@@ -161,7 +161,7 @@ jobs:
     needs: Push-to-ECR
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to EC2 with SSHH
+      - name: Deploy to EC2 with SSH
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.EC2_HOST }}
